# wise_clacker

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/Bongo stripped/: bongo_both  bongo_both_inverted  bongo_left  bongo_left_inverted  bongo_right  bongo_right_inverted  bongo_up  bongo_up_inverted
src/: key_code.rs  keyboard.rs  keys.rs  main.rs
src/mybuf/: mod.rs
